--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
     <!-- Meta Description -->
     <meta name="description" content="Nicholas Knight's portfolio showcasing projects in SQL, JavaScript, Python, and Tableau. Explore business management and web development skills.">
     <link rel="icon" type="image/x-icon" href="./images/PortfolioSiteLogo.jpg">
-    <link rel="stylesheet" href="Project1.CSS">
+    <link rel="stylesheet" href="Project.CSS">
     <!-- SEO Title -->
     <title>Nicholas Knight | Business Management & Web Development Portfolio</title>
 </head>
